--- a/src/gwt/build.xml
+++ b/src/gwt/build.xml
@@ -30,7 +30,7 @@
 
    <!-- Configure path to GWT SDK -->
    <property name="gwt.sdk" value="${lib.dir}/gwt/gwt-rstudio"/>
-   <property name="gwt.extra.args" value=""/>
+   <property name="gwt.extra.args" value="-gen generatedFiles"/>
    <property name="gwt.main.module" value="org.rstudio.studio.RStudio"/>
    <property name="ace.bin" value="${src.dir}/org/rstudio/studio/client/workbench/views/source/editors/text/ace"/>
 
@@ -196,6 +196,7 @@
       <antcall target="codeserver">
          <param name="gwt.main.module" value="org.rstudio.studio.RStudioSuperDevMode"/>
          <param name="panmirror.target" value="ide-dev"/>
+
       </antcall>
    </target>
 
@@ -227,6 +228,8 @@
          <arg value="-startupUrl"/>
          <arg value="http://localhost:8787"/>
          <arg line="-bindAddress ${bind.address}"/>
+         <!-- Add arg for exporting generated files  -->
+         <arg line="${gwt.extra.args}"/>
          <arg value="-generateJsInteropExports"/>
          <arg value="${gwt.main.module}"/>
       </java>
