--- a/src/gwt/src/org/rstudio/studio/client/workbench/prefs/views/PaneLayoutPreferencesConstants.properties
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/prefs/views/PaneLayoutPreferencesConstants.properties
@@ -1,4 +1,4 @@
-paneLayoutText=@enChoose the layout of the panels in RStudio by selecting from the controls in
+paneLayoutText=Choose the layout of the panels in RStudio by selecting from the controls in 
 paneLayoutAddText=each panel. Add up to three additional Source Columns to the left side of the layout. 
 paneLayoutRemoveText=When a column is removed, all saved files within the column are closed and any unsaved 
 paneLayoutMoveText=files are moved to the main Source Pane.
